--- a/Projekat/Projekat/Views/Taxi/IzmenaVozacaError.cshtml
+++ b/Projekat/Projekat/Views/Taxi/IzmenaVozacaError.cshtml
@@ -7,7 +7,7 @@
 
     <h2 class="w3-text-white w3-center">Korisnicko ime je zauzeto, izaberite drugo korisnicko ime</h2>
 
-    <form action="/Taxi/KreiranjeVozaca" method="post">
+    <form action="/Taxi/IzmeniVozac" method="post">
         <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
             <tr>
                 <td>
@@ -193,7 +193,7 @@
             </tr>
             <tr>
                 <td colspan="2" align="center">
-                    <input type="submit" value="Kreiraj" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                    <input type="submit" value="Kreiraj" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple" />
                 </td>
             </tr>
         </table>
