--- a/Projekat/Projekat/Views/Taxi/SignUpError2.cshtml
+++ b/Projekat/Projekat/Views/Taxi/SignUpError2.cshtml
@@ -7,7 +7,7 @@
 <body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
 
     <h2 class="w3-text-white w3-center">Korisnicko ime je zauzeto, izaberite drugo korisnicko ime</h2>
-    <form action="/Taxi/SignUp" method="post">
+    <form action="/Taxi/Izmeni" method="post">
         <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
             <tr>
                 <td>
