--- a/Projekat/Projekat/Views/Taxi/VozacPreuzimaError.cshtml
+++ b/Projekat/Projekat/Views/Taxi/VozacPreuzimaError.cshtml
@@ -2,10 +2,12 @@
 @{
     Layout = null;
 }
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
     <div class="w3-bar w3-border w3-transparent w3-border-black">
         <a href="/Taxi/GoToHomeVozac" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
     </div>
-    <h2 class="w3-text-white w3-center">Trenutno nemate voznju koja podleze promeni statusa</h2>
+    <h2 class="w3-text-white w3-center">Trenutno niste u mogucnosti da preuzmete voznje</h2>
 </body>
+
