--- a/Projekat/Projekat/Views/Taxi/FiltriranoAdmin.cshtml
+++ b/Projekat/Projekat/Views/Taxi/FiltriranoAdmin.cshtml
@@ -2,33 +2,29 @@
 @{
     Layout = null;
 }
-<head>
-    @{
-        var getVoznje = new Func<Dictionary<string, Voznja>>(() => (Dictionary<string, Voznja>)Session["Voznje"]);
-    }
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-</head>
+
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
     <div class="w3-bar w3-border w3-transparent w3-border-black">
-        <a href="/Taxi/GoToHome" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
+        <a href="/Taxi/GoToHomeAdmin" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
     </div>
-    <table border="1" style="background-color:transparent" class="w3-text-white w3-large">
-        <tr>
-            <th>
-                Vasa lokacija
-            </th>
-            <th>
-                Vreme porudzbine
-            </th>
-            <th>
-                Opcije
-            </th>
-        </tr>
-        @foreach (KeyValuePair<string, Voznja> kv in getVoznje())
-        {
-            try
+    @if (ViewBag.broj != 0)
+    {
+        <table border="1" style="background-color:transparent" class="w3-text-white w3-large">
+            <tr>
+                <th>
+                    Vasa lokacija
+                </th>
+                <th>
+                    Vreme porudzbine
+                </th>
+                <th>
+                    Opcije
+                </th>
+            </tr>
+            @foreach (KeyValuePair<string, Voznja> kv in ViewBag.voznje)
             {
-                if (kv.Value.musterija.KorisnickoIme.Equals((((Korisnik)Session["Ulogovan"]).KorisnickoIme)) && kv.Value.StatusVoznje == STATUS.NACEKANJU)
+                if (kv.Value.StatusVoznje == STATUS.NACEKANJU)
                 {
                     <tr>
                         <td>
@@ -58,13 +54,9 @@
                     </tr>
                 }
             }
-            catch { }
-        }
-        @foreach (KeyValuePair<string, Voznja> kv in getVoznje())
-        {
-            try
+            @foreach (KeyValuePair<string, Voznja> kv in ViewBag.voznje)
             {
-                if (kv.Value.musterija.KorisnickoIme.Equals((((Korisnik)Session["Ulogovan"]).KorisnickoIme)) && kv.Value.StatusVoznje == STATUS.USPESNA && kv.Value.komentar.Opis.IsEmpty())
+                if (kv.Value.StatusVoznje == STATUS.USPESNA && kv.Value.komentar.Opis.IsEmpty())
                 {
                     <tr>
                         <td>
@@ -87,7 +79,7 @@
                         </td>
                     </tr>
                 }
-                else if (kv.Value.musterija.KorisnickoIme.Equals((((Korisnik)Session["Ulogovan"]).KorisnickoIme)) && kv.Value.StatusVoznje == STATUS.USPESNA && !kv.Value.komentar.Opis.IsEmpty())
+                else if (kv.Value.StatusVoznje == STATUS.USPESNA && !kv.Value.komentar.Opis.IsEmpty())
                 {
                     <tr>
                         <td>
@@ -104,7 +96,7 @@
                         </td>
                     </tr>
                 }
-                else if (kv.Value.musterija.KorisnickoIme.Equals((((Korisnik)Session["Ulogovan"]).KorisnickoIme)) && !(kv.Value.StatusVoznje == STATUS.USPESNA || kv.Value.StatusVoznje == STATUS.NACEKANJU))
+                else if (kv.Value.StatusVoznje != STATUS.USPESNA && kv.Value.StatusVoznje != STATUS.NACEKANJU)
                 {
                     <tr>
                         <td>
@@ -116,13 +108,16 @@
                         <td>
                             <form action="/Taxi/PrikaziVoznju" method="post">
                                 <input type="hidden" value="@kv.Key" name="date" />
-                                <input type="submit" value="Prikazi" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                                <input type="submit" value="Prikazi" />
                             </form>
                         </td>
                     </tr>
                 }
             }
-            catch { }
-        }
-    </table>
+        </table>
+    }
+    else
+    {
+        <h2 class="w3-text-white w3-center">Ni jedna voznja ne odgovara zadatom kriterijumu</h2>
+    }
 </body>
