--- a/Projekat/Projekat/Views/Taxi/Index.cshtml
+++ b/Projekat/Projekat/Views/Taxi/Index.cshtml
@@ -2,7 +2,18 @@
 @{
     Layout = null;
 }
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Allerta+Stencil">
+<style>
+    .w3-lobster {
+        font-family: "Allerta Stencil", Sans-serif;
+    }
+</style>
 
-<h2>Index</h2>
-<a href="/Taxi/GoToSignUp">SignUp</a>
-<a href="/Taxi/GoToLogIn">LogIn</a>
+    <body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover" >
+    <div class="w3-bar w3-border w3-transparent w3-border-black" >
+    <a href="/Taxi/GoToSignUp" class="w3-bar-item w3-button w3-right w3-text-white" > Kreirajte profil</a >
+    <a href="/Taxi/GoToLogIn" class="w3-bar-item w3-button w3-right w3-text-white" > Ulogujte se</a >
+    </div >
+    <div class="w3-xxlarge w3-center w3-text-white w3-lobster" style="text-shadow:1px 1px 0 #444" > Dobrodošli na sajt taxi službe</div >
+    </body >
