--- a/Projekat/Projekat/Views/Taxi/IzmenaAdmin.cshtml
+++ b/Projekat/Projekat/Views/Taxi/IzmenaAdmin.cshtml
@@ -6,15 +6,14 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
 
-    <h2 class="w3-text-white w3-center">Korisnicko ime je zauzeto, izaberite drugo korisnicko ime</h2>
-    <form action="/Taxi/SignUp" method="post">
+    <form action="/Taxi/IzmeniAdmin" method="post">
         <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
             <tr>
                 <td>
                     Ime
                 </td>
                 <td>
-                    <input type="text" value="@ViewBag.korisnik.Ime" name="Ime">
+                    <input type="text" value="@(((Korisnik)Session["Ulogovan"]).Ime)" name="Ime">
                 </td>
             </tr>
             <tr>
@@ -22,7 +21,7 @@
                     Prezime
                 </td>
                 <td>
-                    <input type="text" value="@ViewBag.korisnik.Prezime" name="Prezime">
+                    <input type="text" value="@(((Korisnik)Session["Ulogovan"]).Prezime)" name="Prezime">
                 </td>
             </tr>
             <tr>
@@ -30,7 +29,7 @@
                     Korisnicko ime
                 </td>
                 <td>
-                    <input type="text" name="KorisnickoIme">
+                    <input type="text" value="@(((Korisnik)Session["Ulogovan"]).KorisnickoIme)" name="KorisnickoIme">
                 </td>
             </tr>
             <tr>
@@ -38,7 +37,7 @@
                     Email
                 </td>
                 <td>
-                    <input type="email" value="@ViewBag.korisnik.Email" name="Email">
+                    <input type="email" value="@(((Korisnik)Session["Ulogovan"]).Email)" name="Email">
                 </td>
             </tr>
             <tr>
@@ -55,7 +54,7 @@
                 </td>
                 <td>
                     <select name="Pol">
-                        @if (ViewBag.korisnik.Pol == POL.MUSKI)
+                        @if ((((Korisnik)Session["Ulogovan"]).Pol) == POL.MUSKI)
                         {
                             <option selected value="MUSKI">
                                 Muski
@@ -81,7 +80,7 @@
                     JMBG
                 </td>
                 <td>
-                    <input type="text" value="@ViewBag.korisnik.JMBG" name="JMBG">
+                    <input type="text" value="@(((Korisnik)Session["Ulogovan"]).JMBG)" name="JMBG">
                 </td>
             </tr>
             <tr>
@@ -89,15 +88,15 @@
                     Telefon
                 </td>
                 <td>
-                    <input type="tel" value="@ViewBag.korisnik.Telefon" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
+                    <input type="tel" value="@(((Korisnik)Session["Ulogovan"]).Telefon)" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
                 </td>
             </tr>
             <tr>
-                <td> &nbsp;</td>
-                <td>
-                    <input type="submit" value="SignUp" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple" />
+                <td colspan="2" align="center">
+                    <input type="submit" value="Sacuvaj izmene" />
                 </td>
             </tr>
         </table>
     </form>
+
 </body>
