--- a/Projekat/Projekat/Views/Taxi/IzmenaVoznje.cshtml
+++ b/Projekat/Projekat/Views/Taxi/IzmenaVoznje.cshtml
@@ -3,90 +3,94 @@
     Layout = null;
 }
 
-<h2>IzmenaVoznje</h2>
-<form action="/Taxi/IzmenaVoznje" method="post">
-    <table border="0">
-        <tr>
-            <td>
-                X koordinata
-            </td>
-            <td>
-                <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.Xkoordinata" name="Xkoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Y koordinata
-            </td>
-            <td>
-                <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.Ykoordinata" name="Ykoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Ulica
-            </td>
-            <td>
-                <input type="text" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Ulica" name="Ulica">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Broj
-            </td>
-            <td>
-                <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Broj" name="Broj">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Mesto
-            </td>
-            <td>
-                <input type="text" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Mesto" name="Mesto">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pozivni broj
-            </td>
-            <td>
-                <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.PozivniBroj" name="PozivniBroj">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Tip automobila
-            </td>
-            <td>
-                <select name="tip">
-                    @if (ViewBag.voznja.ZeljenoVozilo == TIPAUTOMOBILA.PUTNICKI)
-                    {
-                        <option selected value="PUTNICKI">
-                            Putnicki
-                        </option>
-                        <option value="KOMBI">
-                            Kombi
-                        </option>
-                    }
-                    else
-                    {
-                        <option  value="PUTNICKI">
-                            Putnicki
-                        </option>
-                        <option selected value="KOMBI">
-                            Kombi
-                        </option>
-                    }
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center">
-                <input type="hidden" value="@ViewBag.voznja.VremePorudzbine" name="date" />
-                <input type="submit" value="Sacuvaj izmene" />
-            </td>
-        </tr>
-    </table>
-    <a href="/Taxi/GoToHome">Vratite se na pocetnu</a>
-</form>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
+    <div class="w3-bar w3-border w3-transparent w3-border-black">
+        <a href="/Taxi/GoToHome" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
+    </div>
+    <form action="/Taxi/IzmenaVoznje" method="post">
+        <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
+            <tr>
+                <td>
+                    X koordinata
+                </td>
+                <td>
+                    <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.Xkoordinata" name="Xkoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Y koordinata
+                </td>
+                <td>
+                    <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.Ykoordinata" name="Ykoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Ulica
+                </td>
+                <td>
+                    <input type="text" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Ulica" name="Ulica">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Broj
+                </td>
+                <td>
+                    <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Broj" name="Broj">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Mesto
+                </td>
+                <td>
+                    <input type="text" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.Mesto" name="Mesto">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pozivni broj
+                </td>
+                <td>
+                    <input type="number" value="@ViewBag.voznja.LokacijaDolaskaTaksija.adresa.PozivniBroj" name="PozivniBroj">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tip automobila
+                </td>
+                <td>
+                    <select name="tip">
+                        @if (ViewBag.voznja.ZeljenoVozilo == TIPAUTOMOBILA.PUTNICKI)
+                        {
+                            <option selected value="PUTNICKI">
+                                Putnicki
+                            </option>
+                            <option value="KOMBI">
+                                Kombi
+                            </option>
+                        }
+                        else
+                        {
+                            <option value="PUTNICKI">
+                                Putnicki
+                            </option>
+                            <option selected value="KOMBI">
+                                Kombi
+                            </option>
+                        }
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="hidden" value="@ViewBag.voznja.VremePorudzbine" name="date" />
+                    <input type="submit" value="Sacuvaj izmene" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
