--- a/Projekat/Projekat/Views/Taxi/KreiranjeVozaca.cshtml
+++ b/Projekat/Projekat/Views/Taxi/KreiranjeVozaca.cshtml
@@ -3,171 +3,174 @@
     Layout = null;
 }
 
-<h2>KreiranjeVozaca</h2>
-<form action="/Taxi/KreiranjeVozaca" method="post">
-    <table border="0">
-        <tr>
-            <td>
-                Ime
-            </td>
-            <td>
-                <input type="text" name="Ime">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Prezime
-            </td>
-            <td>
-                <input type="text" name="Prezime">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Korisnicko ime
-            </td>
-            <td>
-                <input type="text" name="KorisnickoIme">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Email
-            </td>
-            <td>
-                <input type="email" name="Email">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Lozinka
-            </td>
-            <td>
-                <input required type="password" name="Lozinka">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pol
-            </td>
-            <td>
-                <select name="Pol">
-                    <option value="MUSKI">
-                        Muski
-                    </option>
-                    <option value="ZENSKI">
-                        Zenki
-                    </option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                JMBG
-            </td>
-            <td>
-                <input type="text" name="JMBG">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Telefon
-            </td>
-            <td>
-                <input type="tel" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Godiste automobila
-            </td>
-            <td>
-                <input type="number" pattern="[1-2][0-9]{3}" name="Godiste">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Registarska oznaka
-            </td>
-            <td>
-                <input type="text" name="RegistarskaOznaka">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Broj vozila
-            </td>
-            <td>
-                <input type="number" name="BrojVozila">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Tip automobila
-            </td>
-            <td>
-                <select name="TipAutomobila">
-                    <option value="PUTNICKI">
-                        Putnicki
-                    </option>
-                    <option value="KOMBI">
-                        Kombi
-                    </option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                X koordinata
-            </td>
-            <td>
-                <input type="number" name="Xkoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Y koordinata
-            </td>
-            <td>
-                <input type="number" name="Ykoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Ulica
-            </td>
-            <td>
-                <input type="text" name="Ulica">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Broj
-            </td>
-            <td>
-                <input type="number" name="Broj">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Mesto
-            </td>
-            <td>
-                <input type="text" name="Mesto">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pozivni broj
-            </td>
-            <td>
-                <input type="number" name="PozivniBroj">
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center">
-                <input type="submit" value="Kreiraj" />
-            </td>
-        </tr>
-    </table>
-</form>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
+
+    <form action="/Taxi/KreiranjeVozaca" method="post">
+        <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
+            <tr>
+                <td>
+                    Ime
+                </td>
+                <td>
+                    <input type="text" name="Ime">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Prezime
+                </td>
+                <td>
+                    <input type="text" name="Prezime">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Korisnicko ime
+                </td>
+                <td>
+                    <input type="text" name="KorisnickoIme">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email
+                </td>
+                <td>
+                    <input type="email" name="Email">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Lozinka
+                </td>
+                <td>
+                    <input required type="password" name="Lozinka">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pol
+                </td>
+                <td>
+                    <select name="Pol">
+                        <option value="MUSKI">
+                            Muski
+                        </option>
+                        <option value="ZENSKI">
+                            Zenki
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    JMBG
+                </td>
+                <td>
+                    <input type="text" name="JMBG">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Telefon
+                </td>
+                <td>
+                    <input type="tel" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Godiste automobila
+                </td>
+                <td>
+                    <input type="number" min="1900" max="2018" name="Godiste">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Registarska oznaka
+                </td>
+                <td>
+                    <input type="text" name="RegistarskaOznaka">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Broj vozila
+                </td>
+                <td>
+                    <input type="number" name="BrojVozila">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Tip automobila
+                </td>
+                <td>
+                    <select name="TipAutomobila">
+                        <option value="PUTNICKI">
+                            Putnicki
+                        </option>
+                        <option value="KOMBI">
+                            Kombi
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    X koordinata
+                </td>
+                <td>
+                    <input type="number" name="Xkoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Y koordinata
+                </td>
+                <td>
+                    <input type="number" name="Ykoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Ulica
+                </td>
+                <td>
+                    <input type="text" name="Ulica">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Broj
+                </td>
+                <td>
+                    <input type="number" name="Broj">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Mesto
+                </td>
+                <td>
+                    <input type="text" name="Mesto">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pozivni broj
+                </td>
+                <td>
+                    <input type="number" name="PozivniBroj">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Kreiraj" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
