--- a/Projekat/Projekat/Views/Taxi/OdredisteUnos.cshtml
+++ b/Projekat/Projekat/Views/Taxi/OdredisteUnos.cshtml
@@ -3,69 +3,72 @@
     Layout = null;
 }
 
-<h2>OdredisteUnos</h2>
-<form action="/Taxi/OdredisteIznos" method="post">
-    <table border="0">
-        <tr>
-            <td>
-                X koordinata
-            </td>
-            <td>
-                <input type="number" name="Xkoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Y koordinata
-            </td>
-            <td>
-                <input type="number" name="Ykoordinata">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Ulica
-            </td>
-            <td>
-                <input type="text" name="Ulica">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Broj
-            </td>
-            <td>
-                <input type="number" name="Broj">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Mesto
-            </td>
-            <td>
-                <input type="text" name="Mesto">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pozivni broj
-            </td>
-            <td>
-                <input type="number" name="PozivniBroj">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Iznos
-            </td>
-            <td>
-                <input type="number" name="cena">
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" align="center">
-                <input type="submit" value="Unesi" />
-            </td>
-        </tr>
-    </table>
-</form>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
+
+    <form action="/Taxi/OdredisteIznos" method="post">
+        <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
+            <tr>
+                <td>
+                    X koordinata
+                </td>
+                <td>
+                    <input type="number" name="Xkoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Y koordinata
+                </td>
+                <td>
+                    <input type="number" name="Ykoordinata">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Ulica
+                </td>
+                <td>
+                    <input type="text" name="Ulica">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Broj
+                </td>
+                <td>
+                    <input type="number" name="Broj">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Mesto
+                </td>
+                <td>
+                    <input type="text" name="Mesto">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pozivni broj
+                </td>
+                <td>
+                    <input type="number" name="PozivniBroj">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Iznos
+                </td>
+                <td>
+                    <input type="number" name="cena">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <input type="submit" value="Unesi" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
