--- a/Projekat/Projekat/Views/Taxi/OtkazivanjeError.cshtml
+++ b/Projekat/Projekat/Views/Taxi/OtkazivanjeError.cshtml
@@ -1,7 +1,12 @@
 ﻿
 @{
-    Layout
+    Layout = null;
 }
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
 
-<h2>Greska prilikom otkazivanja voznje</h2>
-<a href="/Taxi/GoToHome">Vratite se na pocetnu</a>
+    <h2 class="w3-text-white w3-center">Greska prilikom otkazivanja voznje</h2>
+    <div class="w3-bar w3-border w3-transparent w3-border-black">
+        <a href="/Taxi/GoToHome" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
+    </div>
+</body>
