--- a/Projekat/Projekat/Views/Taxi/ProveriVoznje.cshtml
+++ b/Projekat/Projekat/Views/Taxi/ProveriVoznje.cshtml
@@ -4,8 +4,12 @@
 
 }
 
-<h2>ProveriVoznje</h2>
-    <table border="0">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
+    <div class="w3-bar w3-border w3-transparent w3-border-black">
+        <a href="/Taxi/GoToHomeAdmin" class="w3-bar-item w3-button w3-text-white">Povratak na pocetnu stranicu</a>
+    </div>
+    <table border="1" style="background-color:transparent" class="w3-text-white w3-large">
         <tr>
             <th>
                 Vreme kreiranja porudzbine
@@ -25,11 +29,11 @@
                     <td>
                         <form action="/Taxi/DodeliVoznju" method="post">
                             <input type="hidden" value="@kv.Key" name="date" />
-                            <input type="submit" value="Dodeli" />
+                            <input type="submit" value="Dodeli" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
                         </form>
                     </td>
                 </tr>
             }
         }
     </table>
-    <a href="/Taxi/GoToHomeAdmin">Vratite se na pocetnu</a>
+</body>
