--- a/Projekat/Projekat/Views/Taxi/SignUp.cshtml
+++ b/Projekat/Projekat/Views/Taxi/SignUp.cshtml
@@ -3,85 +3,103 @@
     Layout = null;
 }
 
-<h2>SignUp</h2>
-<form action="/Taxi/SignUp" method="post">
-    <table border="0">
-        <tr>
-            <td>
-                Ime
-            </td>
-            <td>
-                <input type="text" name="Ime">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Prezime
-            </td>
-            <td>
-                <input type="text" name="Prezime">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Korisnicko ime
-            </td>
-            <td>
-                <input type="text" name="KorisnickoIme">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Email
-            </td>
-            <td>
-                <input type="email" name="Email">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Lozinka
-            </td>
-            <td>
-                <input required type="password" name="Lozinka">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Pol
-            </td>
-            <td>
-                <select name="Pol">
-                    <option value="MUSKI">
-                        Muski
-                    </option>
-                    <option value="ZENSKI">
-                        Zenki
-                    </option>
-                </select>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                JMBG
-            </td>
-            <td>
-                <input type="text" name="JMBG">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                Telefon
-            </td>
-            <td>
-                <input type="tel" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
-            </td>
-        </tr>
-        <tr>
-            <td> &nbsp;</td>
-            <td>
-                <input type="submit" value="SignUp" />
-            </td>
-        </tr>
-    </table>
-</form>
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body style="background-image:url(https://static.superiorwallpapers.com/images/lthumbs/2015-05/7926_Yellow-taxi-from-New-York-City.jpg); background-repeat: no-repeat; background-size: cover">
+    <form action="/Taxi/SignUp" method="post">
+        <table border="0" style="background-color:transparent" class="w3-text-white w3-display-left w3-large">
+            <tr>
+                <td colspan="2">
+                    Kreiranje profila
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td>
+                    Ime
+                </td>
+                <td>
+                    <input type="text" name="Ime">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Prezime
+                </td>
+                <td>
+                    <input type="text" name="Prezime">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Korisnicko ime
+                </td>
+                <td>
+                    <input type="text" name="KorisnickoIme">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Email
+                </td>
+                <td>
+                    <input type="email" name="Email">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Lozinka
+                </td>
+                <td>
+                    <input required type="password" name="Lozinka">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Pol
+                </td>
+                <td>
+                    <select name="Pol">
+                        <option value="MUSKI">
+                            Muski
+                        </option>
+                        <option value="ZENSKI">
+                            Zenki
+                        </option>
+                    </select>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    JMBG
+                </td>
+                <td>
+                    <input type="text" name="JMBG">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Telefon
+                </td>
+                <td>
+                    <input type="tel" name="Telefon" pattern="[0-9]{3} [0-9]{3}-[0-9]{3,4}" placeholder="060 111-1111" oninvalid="setCustomValidity('Format telefonskog broja je: 060 111-1111')" oninput="setCustomValidity('')">
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"></td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    <input type="submit" value="Kreirajte profil" style="background-color:transparent; border:none" class="w3-text-white w3-hover-purple"/>
+                </td>
+            </tr>
+        </table>
+    </form>
+</body>
